<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.yuanmai.cloud</groupId>
    <artifactId>yuanmai-huaweicloud</artifactId>
    <version>23.0</version>
    <packaging>pom</packaging>
    <modules>
        <module>huaweicloud-log</module>
        <module>huaweicloud-bom</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <yuanmai-compoenents.version>23.0</yuanmai-compoenents.version>
        <rversion>23.0</rversion>
        <lts-sdk-common.version>1.0.2</lts-sdk-common.version>
        <lts-sdk-java.version>1.0.2.1</lts-sdk-java.version>
        <huawei-lts-sk.version>3.1.96</huawei-lts-sk.version>
        <junit.version>5.10.2</junit.version>
        <lombok.version>1.18.32</lombok.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.yuanmai.components</groupId>
                <artifactId>yuanmai-components-bom</artifactId>
                <version>${yuanmai-compoenents.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.huaweicloud.sdk</groupId>
                <artifactId>huaweicloud-sdk-lts</artifactId>
                <version>${huawei-lts-sk.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.huaweicloud</groupId>
                <artifactId>lts-sdk-common</artifactId>
                <version>${lts-sdk-common.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.huaweicloud</groupId>
                <artifactId>lts-sdk-java</artifactId>
                <version>${lts-sdk-java.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
        </dependency>
    </dependencies>
    <distributionManagement>
        <repository>
            <id>yuanmai</id>
            <url>https://packages.aliyun.com/maven/repository/2003547-release-AmXxfp</url>
        </repository>
        <snapshotRepository>
            <id>yuanmai</id>
            <url>https://packages.aliyun.com/maven/repository/2003547-snapshot-xxdKnz</url>
        </snapshotRepository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>xux</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <repositories>
                <repository>
                    <id>fucksky-yuanmai-public</id>
                    <url>https://fucksky-maven.pkg.coding.net/repository/yuanmai/public/</url>
                    <snapshots>
                        <enabled>true</enabled>
                        <!--always daily interval:XXX-->
                        <updatePolicy>always</updatePolicy>
                        <checksumPolicy>warn</checksumPolicy>
                    </snapshots>
                    <releases>
                        <enabled>true</enabled>
                        <updatePolicy>daily</updatePolicy>
                        <checksumPolicy>warn</checksumPolicy>
                    </releases>
                </repository>
            </repositories>
        </profile>
    </profiles>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources/</directory>
                <filtering>false</filtering>
                <includes>
                    <include>**/*.xml</include>
                    <include>**/*.yml</include>
                    <include>**/*.properties</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources/</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>**/*.xml</exclude>
                    <exclude>**/*.yml</exclude>
                    <exclude>**/*.properties</exclude>
                </excludes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <release>${maven.compiler.target}</release>
                    <meminitial>512m</meminitial>
                    <maxmem>1024m</maxmem>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <skip>true
                    </skip>
                    <argLine>
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                    </argLine>
                    <forkCount>0</forkCount>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>